# customer-segmentation

./: .dockerignore  .gitignore  AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: data_guide.md  methods.md
examples/: customer_template.csv  customer_template.xlsx  demo_customers.csv  demo_needs_survey.csv  demo_transactions.csv
scripts/: generate_examples.py
src/segmentsignal/: __init__.py  errors.py  features.py  io.py  modeling.py  preprocessing.py  profiling.py  validation.py
tests/: test_app_pages.py  test_features_and_preprocessing.py  test_io_and_validation.py  test_modeling.py  test_profiling_and_exports.py
